improvement: update endpoint
